--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,7 @@ fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
 pydantic>=2.9.0
 python-multipart>=0.0.9
+razorpay>=1.4.1
+python-dotenv>=1.0.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
