--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shimmer: ^3.0.0
   razorpay_flutter: ^1.3.7
   flutter_dotenv: ^5.2.1
+  clerk_flutter: ^0.0.14-beta
 
 dev_dependencies:
   flutter_test:
